# Modelo-Padel-VRO

./: .gitignore  AGENTS.md  CLAUSULA_CITACAO_para_instrucoes.md  COMECAR_AQUI.md  CONSTITUICAO.md  CONSTITUICAO_bloco_citacao_16JUL.md  DEMO_citacao.md  FECHO_13JUL.md  FECHO_13JUL_NOITE.md  FECHO_14JUL.md  FECHO_14JUL_INFRAESTRUTURA.md  FECHO_14JUL_NOITE.md  GUARDA_CITACAO.command  HANDOFF.md  HANDOFF_14JUL.md  MAPA_DAS_REGRAS.md  PROMPT_AMANHA_m3.md  PROMPT_A_CURA_DA_DOENCA.md  PROMPT_CLAUDE_CODE_jogadores.md  PROMPT_HOJE_video2.md  README.md  RECEITA_VIDEO_NOVO.md  REGRAS_DO_VASCO.md  REGRAS_PERDIDAS_dos_prompts.md  REGRAS_PERDIDAS_v2_dos_originais.md  RETOMAR_13JUL.md  TUDO_CITACAO_16JUL.md  _off_tmp.py  ablacao.py  auditar_mentiras.py  avaliar_barbosa.py  calibracao_BarbosaMeireles.json  calibracao_campo.json  calibracao_parada4.json  calibracao_parada4_v2.json  calibrar_campo.html  cascata_jogadores.py  check_rede.py  citar.py  comparar_pkl.py  (+61 more)
M1_13jul2026_96.3-95.9/: HANDOFF_14JUL.md
app/: app.py
colab/: BlurBall_thr04.ipynb  BlurBall_thr04_KAGGLE.ipynb  afinar_jogadores.py  celula4_margens_afinadas.py  colab_ball_test.ipynb  colab_ball_train_pipeline.ipynb  colab_gemini_v9_test.ipynb  colab_jogadores_padel_analytics.ipynb  colab_padel_analytics.ipynb  colab_padeltracker100_explore.ipynb  colab_pipeline_tempo_util.ipynb  colab_teste_bola_tempoutil.ipynb  correr_jogadores_final.py
data/: traj_frames_Parada4.csv
docs/: AFINAR_TEMPO_UTIL_v2.md  ANOTACAO_E_RETREINO.md  BENCHMARK_calibracao_campo.md  BENCHMARK_inferir_linhas.md  CONTEXTO_PROJETO_MODELO.md  (+16 more)
(+56 files in other folders)
